--- a/HRprogram/HRprogram.csproj
+++ b/HRprogram/HRprogram.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AddEditEmployee.Designer.cs">
       <DependentUpon>AddEditEmployee.cs</DependentUpon>
     </Compile>
+    <Compile Include="FileHelper.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
