--- a/HRprogram/HRprogram.csproj
+++ b/HRprogram/HRprogram.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,6 +55,7 @@
     </Compile>
     <Compile Include="Employee.cs" />
     <Compile Include="FileHelper.cs" />
+    <Compile Include="FireEmployee.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
